--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width,initial-scale=1" name="viewport" />
+    <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" type="text/css" rel="stylesheet" />
     <title>AWS Build On</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
